--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,9 @@
     box-sizing: border-box;
 }
 
+
+/* Estilos Generales */
+
 body {
     margin-top: 56px;
 }
@@ -35,14 +38,22 @@ p {
     border: none;
 }
 
-.pie {
-    background-color: rgb(14,80,79);
-}
-
-
 li a {
     font-family: 'Neucha', sans-serif;
 }
+
+.btn:hover {
+    background-color: black;
+    color: white;
+    border: none;
+    transition: .5s;
+}
+
+.titulos {
+    color: rgb(14,80,79);
+}
+
+/* Hero Pagina de Inicio*/
 
 .hero {
     background-image:url(../images/sunset-4603355_1920.jpg);
@@ -61,13 +72,7 @@ li a {
     height: 100%;
 }
 
-.btn:hover {
-    background-color: black;
-    color: white;
-    border: none;
-    transition: .5s;
-}
-
+/* Seccion de tienda */
 
 .tienda {
     height: 300px;
@@ -96,6 +101,8 @@ li a {
     text-align: center;
 }
 
+/* Hero Pagina Nosotros*/
+
 .secondaryHero {
     height: 91vh;
     background: rgb(250,202,117);
@@ -110,16 +117,21 @@ li a {
     color: rgb(14,80,79);
 }
 
-.titulos {
-    color: rgb(14,80,79);
-}
+
 
 .nosotros {
     background-color: rgb(14,80,79);
 }
 
+
+/* Footer */
+
 footer {
     min-height: 100px;
+}
+
+.pie {
+    background-color: rgb(14,80,79);
 }
 
 .pie-texto {
