--- a/css/partials/_carousel.scss
+++ b/css/partials/_carousel.scss
@@ -2,7 +2,7 @@
     height: 450px;
     
 
-    & .d-img{
+    .d-img{
         height: 100%;
         background-position: center;
         object-fit: cover;
