--- a/css/partials/_heroNosotros.scss
+++ b/css/partials/_heroNosotros.scss
@@ -9,11 +9,11 @@
 }
 
 .secondaryHero__text {
-    color: rgb(14,80,79);
+    color: $color1;
 }
 
 
 
 .nosotros {
-    background-color: rgb(14,80,79);
+    background-color: $color1;
 }
