--- a/css/partials/_footer.scss
+++ b/css/partials/_footer.scss
@@ -3,41 +3,42 @@ footer {
 }
 
 .pie {
-    background-color: rgb(14,80,79);
-}
+    background-color: $color1;
 
-.pie-texto {
-    font-size: 1.3rem;
-    padding: 10px;
-    margin-bottom: 5px;
-}
 
-.iconos-redes a {
-    width: 40px;
-    height: 40px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    padding: 2px;
-    margin: 10px;
-    border: 2px solid white;
-    border-radius: 50%;
-    transition: 0.2s ease-in;
-    text-decoration: none;
-}
+    .pie-texto {
+        font-size: 1.3rem;
+        padding: 10px;
+        margin-bottom: 5px;
+    }
 
-.iconos-redes a:hover {
-    background-color: white;
-    border: 2px solid white
-    
-}
+    .iconos-redes a {
+        width: 40px;
+        height: 40px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        padding: 2px;
+        margin: 10px;
+        border: 2px solid white;
+        border-radius: 50%;
+        transition: 0.2s ease-in;
+        text-decoration: none;
+    }
 
-.iconos-redes i {
-    color: white;
-    font-size: 1.5rem;
-    transition: all 0.2s ease-in;
-}
+    .iconos-redes a:hover {
+        background-color: white;
+        border: 2px solid white
+    }
 
-.iconos-redes i:hover {
-    color: black;
+    .iconos-redes i {
+        color: white;
+        font-size: 1.5rem;
+        transition: all 0.2s ease-in;
+    }
+
+    .iconos-redes i:hover {
+        color: black;
+    }
+
 }
